# pancake

./: Building a 3D-Printing slicer in Rust.md  Cargo.toml
src/: ast.rs  gcode.rs  main.rs  math.rs  slice.rs  stage.rs  transform.lalrpop
src/math/: mod.rs  polygon.rs
stl_files/: cone.stl  cube_off.stl  lowpolybenchy-1.stl  pikachu_1gen_flowalistik.STL  tent.stl  tent_2.stl  tent_staged.stl  torus.stl
