[package]
name = "pancake"
version = "0.1.0"
authors = ["Hugo Sabourin <hsabouri@student.42.fr>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0", features = ["lexer"] }

[dependencies]
stl_io = {git="https://github.com/hsabouri/stl_io"}
clap = "3.0.0-beta.2"
anyhow = "1"
lalrpop-util = "0"
regex = "1"